current/base/discord-bot-v3/deployment-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot-v3
  labels:
    app: discord-bot-v3
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: discord-bot-v3
  template:
    metadata:
      name: discord-bot-v3
      labels:
        app: discord-bot-v3
    spec:
      containers:
        - name: discord-bot-v3
          image: vatusa/discord-bot-v3
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 50m
              memory: 128Mi
          command: ["/app/bot"]
          volumeMounts:
            - mountPath: "/mnt/config"
              name: config
      volumes:
        - name: config
          configMap:
            name: discord-bot-v3-config
      restartPolicy: Always
