current/base/discord-bot-v3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-bot-v3-web-shim
spec:
  selector:
    app: discord-bot-v3
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
  type: ClusterIP
